fix footer and main align

--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,6 @@
     box-sizing: border-box;
 }
 
-
-
 /* GENERICS */
 
 header{
@@ -47,6 +45,10 @@ header{
     background-color: gray;
 }
 
+.pd-50{
+    padding: 50px;
+}
+
 /* HEADER */
 
 .container-header{
@@ -84,7 +86,7 @@ header{
 
 .content-head{
     width: 60%;
-    height: 400px;
+    min-height: 400px;
     background-color: plum;
     border: 2px dashed black;
 }
@@ -93,7 +95,7 @@ header{
 
 .main-content{
     flex-direction: row;
-    padding:50px    
+    
 }
 
 .main-content-reverse{
@@ -104,18 +106,15 @@ header{
     min-height:600px;
     background-color: green;
     border: 2px dashed black;
-    padding: 50px;
+    
 }
 
 /* COLUMN */
 
 .column{
     background-color: #23272A;
-}
-
-.container-col-main{
-    padding: 50px 0;
-
+    padding-top: 20px;
+    padding-bottom: 40px;
 }
 
 .column-social{
@@ -134,7 +133,7 @@ header{
 
 }
 
-.col-left, .col-medium-left, .column-right, .col-right{
+.col-left, .col-medium-left, .col-medium-right, .col-right{
     width: calc(100% / 4);
     min-height: 400px;
     border: 2px dashed black;
@@ -153,6 +152,7 @@ header{
     background-color: mediumaquamarine;
     min-height: 100px;
     justify-content: space-between;
+    align-items: center;
 }
 
 #logo-footer{
